--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -22,15 +23,12 @@
   <div id="map"></div>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <script>
-    // יצירת מפה ומיקוד
-    var map = L.map('map').setView([32.0853, 34.7818], 11); // מרכז תל אביב
+    var map = L.map('map').setView([32.0853, 34.7818], 11);
 
-    // טיל של מפה
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    // רשימת אטרקציות לדוגמה
     const attractions = [
       {
         name: "ג'ימבורי פתח תקווה",
@@ -52,7 +50,6 @@
       }
     ];
 
-    // הוספת מרקרים למפה
     attractions.forEach(attraction => {
       L.marker([attraction.lat, attraction.lng]).addTo(map)
         .bindPopup(`<b>${attraction.name}</b><br><br><a href="${attraction.url}" target="_blank"><button class='popup-button'>נצל כניסה</button></a>`);
